snapshot-tests/tests/snapshots/parser__bad_codepoint.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidEscapeValue]: invalid escape value: `\uD800` at foo
  ┌─ bad_codepoint:1:9
  │
1 │ foo = "\uD800"
  │         ^^^^ invalid escape value
